--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <li>
+        <ul><a href="recipes/lasagna.html">Lasagna</a></ul>
+        <ul><a href="recipes/chicken.html">Chicken Breast</a></ul>
+        <ul><a href="recipes/pork-chops.html">Pork Chops</a></ul>
+    
+    </li>
+    
 </body>
 </html>
